# mischooldata_etl

./: .gitignore  README.md  load_school_attendance.py  logging_config.json  metadata.toml  pyproject.toml  requirements.txt
2024/: load_eem_schools.py  load_school_attendance.py
assessments/: load.py  transform.py
assessments/conf/: dataset_years.csv  field_reference_2015_2024.json
attendance/: attendance_schema.py  metadata.toml  process_attendance.py  transform.py
attendance/2024/: archive.py  load.py  validate.py
cohort/: create_cohort.py
eem_schools/: eem_schema.py  metadata.toml
eem_schools/2024/: eem_schools_2024_etl.py  extract.py  load.py  transform.py  validate.py
mischooldata_etl/: common.py
mischooldata_etl/assessments/: load.py  process_assessments.py  transform.py
mischooldata_etl/attendance/: load.py  process_attendance.py  transform.py
mischooldata_etl/college_destination/: load.py  process_college_destination.py  transform.py
mischooldata_etl/college_enrollment/: load.py  process_college_enrollment.py  transform.py
mischooldata_etl/college_readiness/: load.py  process_college_readiness.py  transform.py
mischooldata_etl/early_childhood/: load.py  process_early_childhood.py  transform.py
mischooldata_etl/eem/: geocode.py  load.py  (+2 more)
mischooldata_etls/: __init__.py  schema.py
non_resident/: extract.py  load.py  schema.py  transform.py
student_counts/: extract.py  load.py  metadata.toml  schema.py  student_counts_schema.py  transform.py
student_mobility/: extract.py  load.py  process_student_counts.py  schema.py  transform.py
(+62 files in other folders)
