[project]
name = "mischooldata-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inequalitytools",
    "pandas>=2.3.0",
    "psycopg>=3.2.9",
    "pygris>=0.2.0",
    "sqlalchemy>=2.0.41",
    "tomli>=2.2.1",
]

[tool.uv.sources]
mischooldata-etl = { workspace = true }
inequalitytools = { git = "https://github.com/data-driven-detroit/inequalitytools.git" }

[dependency-groups]
dev = [
    "mischooldata-etl",
]
